# sync_pointcloud

./: .travis.yml  CMakeLists.txt  README.md  nodelet_plugins.xml  package.xml
include/sync_pointcloud/: sync_pointcloud.h
launch/: sync_pointcloud_standalone_nodelet.launch
src/: sync_pointcloud.cpp
src/nodelets/: sync_pointcloud_nodelet.cpp
src/nodes/: sync_pointcloud_node.cpp
